--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-markdown": "^10.1.0",
     "recharts": "^3.2.1",
     "remark-gfm": "^4.0.1",
+    "svix": "^1.76.1",
     "tailwind-merge": "^3.3.0",
     "uuid": "^13.0.0",
     "zod": "^3.25.32"
